--- a/index.html
+++ b/index.html
@@ -20,6 +20,31 @@
   <body>
  
 
+<div class="container">
+  <div class="row">
+  <svg viewBox="0 0 960 300">
+    <symbol id="s-text">
+    <text text-anchor="middle" x="50%" y="80%">Ganesh </text>
+  </symbol>
+
+  <g class = "g-ants">
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+  </g>
+</svg>
+  </div>
+    
+    <div class="row">
+    <address>
+        author by: Ganesh Gujjeti
+    </address>
+        </div>
+    </div>
+</div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
