--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <div class="row">
   <svg viewBox="0 0 960 300">
     <symbol id="s-text">
-    <text text-anchor="middle" x="50%" y="80%">Ganesh </text>
+    <text text-anchor="middle" x="50%" y="60%">GIT</text>
+    <text text-anchor="middle" x="50%" y="90%">Даниил </text>
   </symbol>
 
   <g class = "g-ants">
@@ -39,8 +40,7 @@
   </div>
     
     <div class="row">
-    <address>
-        author by: Ganesh Gujjeti
+    <address> 
     </address>
         </div>
     </div>
